# evaluacion-dashboard-backend

./: .gitignore  GUIA_INICIO.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/models/: __init__.py  detalle_schemas.py  mejora_schemas.py  schemas.py
app/api/routes/: __init__.py  estadisticas.py  profesores.py
app/application/dtos/: __init__.py  detalle_dtos.py  mejora_dtos.py  profesor_dtos.py
app/application/use_cases/: __init__.py  calcular_promedio_profesor.py  obtener_detalle_evaluacion.py  obtener_propuesta_mejora.py
app/core/: config.py  exceptions.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  categoria.py  evaluacion.py  pregunta.py  profesor.py
app/domain/repositories/: __init__.py  i_repository.py
app/domain/value_objects/: __init__.py  calificacion.py  periodo.py
app/infrastructure/: __init__.py
app/infrastructure/parsers/: __init__.py  csv_parser.py
app/infrastructure/repositories/: __init__.py  pandas_repository.py
app/infrastructure/services/: pdf_generator.py
tests/unit/: test_calcular_promedio_profesor.py
